--- a/src/sass/theme/highcharts.sass
+++ b/src/sass/theme/highcharts.sass
@@ -12,3 +12,8 @@
   text
     tspan:nth-child(2)
       fill: $main-text-color !important
+
+.highcharts-legend-item
+  path
+    fill: $main-bg-color
+    stroke: $main-bg-color
