--- a/src/sass/variables.sass
+++ b/src/sass/variables.sass
@@ -6,3 +6,11 @@ $additional-text-color: #ffffff
 $header-bg-color: $main-bg-color
 $header-text-color: #f5cd79
 $header-icon-height: 50px
+
+$btn-bg-color: #f5cd79
+$btn-text-color: #303952
+$btn-additional-bg-color: #e15f41
+$btn-additional-text-color: #ffffff
+
+$footer-bg-color: $main-bg-color
+$footer-text-color: $additional-text-color
